--- a/demo.html
+++ b/demo.html
@@ -35,9 +35,8 @@
             
             <div class="hitW">
                   <div class="myHit">
-                      <p>为避免消耗你的流量,请选择是否只加载第一首歌</p>
-                      <span class="yes btn">是</span>
-                      <span class="no btn">否</span>
+                      <p><strong>温馨提示</strong>歌曲在线播放会比较耗流量,请注意您的流量</p>
+                      <span class="yes btn">知道了</span>
                   </div>
                  
                 <div id="select">
@@ -49,11 +48,6 @@
 
             </div>
 
-            <div class="loading">
-                <h4>正在加载....</h4>
-                <span class="clip"></span>
-                <span class="now">0%</span>
-            </div>
         </div>
 
          <header class="point">二次单击切换到歌词页面</header>
