--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@
             
             <div class="hitW">
                   <div class="myHit">
-                      <p><strong>温馨提示</strong>歌曲在线播放会比较耗流量,请注意您的流量</p>
+                      <p><strong>温馨提示</strong>为避免消耗亲的流量，歌曲不做预加载，体验效果会略差</p>
                       <span class="yes btn">知道了</span>
                   </div>
                  
@@ -128,7 +128,7 @@
     </div>
 
 
-    <audio id="myMusic" src="music/安和桥.mp3"></audio>
+    <audio id="myMusic" src="music/安和桥.mp3" preload="preload"></audio>
 
  
     <script src="js/controlMusic.js"></script>
